# DockMaster

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  init.sql
.devcontainer/: .bash_aliases  devcontainer.json  docker-compose-dev.yml  docker-compose-docker.yml  docker-compose-postgres.yml  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: cd-deploy.yml  ci-test.yml
dock_master/: Cargo.toml
dock_master/src/: lib.rs  main.rs
dock_master/src/config/: logger.rs
dock_master/src/controllers/: todo_controller.rs
migrations/2024-03-22-143712_init/: down.sql  up.sql
src/: main.rs
src/database/: schema.rs
src/models/: todo.rs
src/services/: todo_service.rs
