[package]
name = "dock_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = { version = "4.5.1" }
diesel = { version = "2.1.5", features = ["postgres"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
serde = "1.0.197"
uuid = { version = "1.8.0", features = ["v4"] }
